// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$Exact flow utility type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "object",
              "members": Array [
                Object {
                  "key": Object {
                    "kind": "id",
                    "name": "bar",
                  },
                  "kind": "property",
                  "optional": false,
                  "value": Object {
                    "kind": "string",
                  },
                },
              ],
              "referenceIdName": "BaseProps",
            },
          },
        },
        Object {
          "default": Object {
            "kind": "boolean",
            "value": false,
          },
          "key": Object {
            "kind": "id",
            "name": "isDefaultChecked",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`Assignment Pattern 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "async": false,
          "generator": false,
          "id": null,
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "assignmentPattern",
                "left": Object {
                  "kind": "id",
                  "name": "b",
                  "type": null,
                },
                "right": Object {
                  "kind": "number",
                  "value": 3,
                },
              },
            },
          ],
          "returnType": Object {
            "kind": "number",
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "number",
              },
            },
          ],
          "returnType": Object {
            "kind": "number",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`BooleanLiteralTypeAnnotation 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "string",
              },
            },
          ],
          "returnType": Object {
            "kind": "boolean",
            "value": true,
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`NullLiteralTypeAnnotation 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "null",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`Should handle ArrayTypeAnnotations 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "arrayType",
          "type": Object {
            "kind": "number",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`Should handle importing JSON files 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "importKind": "value",
          "kind": "import",
          "moduleSpecifier": "./__fixtures__/test",
          "name": "name",
          "referenceIdName": "name",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`Should handle importing other ts files 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "id",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
    },
  },
  "kind": "program",
}
`;

exports[`Should handle rest element 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "async": false,
          "generator": false,
          "id": null,
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "objectPattern",
                "members": Array [
                  Object {
                    "key": Object {
                      "kind": "id",
                      "name": "a",
                      "type": null,
                    },
                    "kind": "property",
                    "value": Object {
                      "kind": "id",
                      "name": "a",
                      "type": null,
                    },
                  },
                  Object {
                    "argument": Object {
                      "kind": "id",
                      "name": "restOfThis",
                      "type": null,
                    },
                    "kind": "rest",
                  },
                ],
              },
            },
          ],
          "returnType": null,
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "void",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`array expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "elements": Array [
            Object {
              "kind": "string",
              "value": "a",
            },
          ],
          "kind": "array",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "typeParams": Object {
            "kind": "typeParams",
            "params": Array [
              Object {
                "kind": "string",
              },
            ],
          },
          "value": Object {
            "kind": "id",
            "name": "Array",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`arrow function expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "async": false,
          "generator": false,
          "id": null,
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "number",
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`binary expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "binary",
          "left": Object {
            "kind": "number",
            "value": 3,
          },
          "operator": "+",
          "right": Object {
            "kind": "number",
            "value": 5,
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`boolean literal 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "boolean",
          "value": true,
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`defined member expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "memberExpression",
          "object": Object {
            "kind": "object",
            "members": Array [
              Object {
                "key": Object {
                  "kind": "id",
                  "name": "c",
                  "type": null,
                },
                "kind": "property",
                "value": Object {
                  "async": false,
                  "generator": false,
                  "id": null,
                  "kind": "function",
                  "parameters": Array [
                    Object {
                      "kind": "param",
                      "type": Object {
                        "kind": "string",
                      },
                      "value": Object {
                        "kind": "id",
                        "name": "a",
                      },
                    },
                    Object {
                      "kind": "param",
                      "type": Object {
                        "kind": "string",
                      },
                      "value": Object {
                        "kind": "id",
                        "name": "b",
                      },
                    },
                  ],
                  "returnType": Object {
                    "kind": "number",
                  },
                },
              },
            ],
            "referenceIdName": "b",
          },
          "property": Object {
            "kind": "id",
            "name": "c",
            "type": null,
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`exists type annotation 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "async": false,
          "generator": false,
          "id": null,
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "exists",
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow any 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "age",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "any",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow array 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "typeParams": Object {
            "kind": "typeParams",
            "params": Array [
              Object {
                "kind": "boolean",
              },
            ],
          },
          "value": Object {
            "kind": "id",
            "name": "Array",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow array union 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "typeParams": Object {
            "kind": "typeParams",
            "params": Array [
              Object {
                "kind": "union",
                "types": Array [
                  Object {
                    "kind": "boolean",
                  },
                  Object {
                    "kind": "number",
                  },
                ],
              },
            ],
          },
          "value": Object {
            "kind": "id",
            "name": "Array",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow arrow function component 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow boolean 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow class with this expression 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "number",
            "value": 1,
          },
          "key": Object {
            "kind": "id",
            "name": "ok",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow default class export 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "OnboardingModal",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow different React component 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": true,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "FooComponent",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow exported type alias reference 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "boolean",
            "referenceIdName": "Foo",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow forwardRef default export 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow function 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "string",
              },
            },
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "number",
              },
            },
          ],
          "returnType": Object {
            "kind": "string",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow function component 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow function component with default including spread 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "string",
            "value": "bob",
          },
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "default": Object {
            "kind": "string",
            "value": "a",
          },
          "key": Object {
            "kind": "id",
            "name": "something",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow function component with default props 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "string",
            "value": "bob",
          },
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow function named params 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "string",
              },
            },
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "number",
              },
            },
          ],
          "returnType": Object {
            "kind": "void",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow function return type 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "number",
              },
            },
          ],
          "returnType": Object {
            "kind": "void",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow function type 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "id",
            "name": "Function",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow function unnamed params 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "string",
              },
            },
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "number",
              },
            },
          ],
          "returnType": Object {
            "kind": "void",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow function unnamed params w/ object 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "param",
              "type": null,
              "value": Object {
                "kind": "object",
                "members": Array [
                  Object {
                    "key": Object {
                      "kind": "id",
                      "name": "prop",
                    },
                    "kind": "property",
                    "optional": false,
                    "value": Object {
                      "kind": "string",
                    },
                  },
                ],
              },
            },
          ],
          "returnType": Object {
            "kind": "void",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow function with defaults not arrow 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "string",
            "value": "bob",
          },
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "default": Object {
            "kind": "string",
            "value": "a",
          },
          "key": Object {
            "kind": "id",
            "name": "something",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow generic class 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "id",
      "name": "A",
    },
  },
  "kind": "program",
}
`;

exports[`flow ignores other components 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow import { type } 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "children",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "importKind": "type",
              "kind": "import",
              "moduleSpecifier": "react",
              "name": "Node",
              "referenceIdName": "Node",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow inline anonymous function component 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow inline arrow function component 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow inline function component 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "name",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow maybe 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "arguments": Object {
            "kind": "string",
          },
          "kind": "nullable",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow mixed 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "age",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "mixed",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow no React component 1`] = `
Object {
  "component": undefined,
  "kind": "program",
}
`;

exports[`flow number 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow optional 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": true,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow recursive type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "props",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "RecursiveType",
            },
          },
        },
      ],
      "referenceIdName": "RecursiveType",
    },
  },
  "kind": "program",
}
`;

exports[`flow string 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "bar",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "ComponentProps",
    },
  },
  "kind": "program",
}
`;

exports[`flow type 2`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "intersection",
          "types": Array [
            Object {
              "kind": "number",
            },
            Object {
              "kind": "string",
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow type alias declaration - 1 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "union",
              "referenceIdName": "ReactElement",
              "types": Array [
                Object {
                  "kind": "generic",
                  "typeParams": Object {
                    "kind": "typeParams",
                    "params": Array [
                      Object {
                        "kind": "any",
                      },
                    ],
                  },
                  "value": Object {
                    "kind": "id",
                    "name": "Element",
                  },
                },
                Object {
                  "kind": "arrayType",
                  "type": Object {
                    "kind": "generic",
                    "typeParams": Object {
                      "kind": "typeParams",
                      "params": Array [
                        Object {
                          "kind": "any",
                        },
                      ],
                    },
                    "value": Object {
                      "kind": "id",
                      "name": "Element",
                    },
                  },
                },
              ],
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow type comments 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "leadingComments": Array [
            Object {
              "raw": " Type comment for a ",
              "type": "commentBlock",
              "value": "Type comment for a",
            },
          ],
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow type identifier 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "children",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "Node",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`flow type parameter declaration 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "typeParams": Object {
            "kind": "typeParams",
            "params": Array [
              Object {
                "kind": "string",
              },
            ],
          },
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "referenceIdName": "Foo",
            "returnType": Object {
              "kind": "generic",
              "value": Object {
                "kind": "typeParamsDeclaration",
                "params": Array [
                  Object {
                    "kind": "typeParam",
                    "name": "T",
                  },
                ],
                "referenceIdName": "T",
              },
            },
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow union 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "boolean",
            },
            Object {
              "kind": "number",
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow union literals 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "age",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "string",
              "value": "25",
            },
            Object {
              "kind": "number",
              "value": 30,
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`flow void 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "void",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`function declaration 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "args": Array [],
          "callee": Object {
            "kind": "id",
            "name": "sayHello",
            "referenceIdName": "sayHello",
            "type": null,
          },
          "kind": "call",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`function expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "async": false,
          "generator": false,
          "id": null,
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "number",
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`imported member expression default 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "memberExpression",
          "object": Object {
            "kind": "id",
            "name": "b",
            "type": null,
          },
          "property": Object {
            "kind": "id",
            "name": "c",
            "type": null,
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`imported member expression named 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "memberExpression",
          "object": Object {
            "kind": "id",
            "name": "b",
            "type": null,
          },
          "property": Object {
            "kind": "id",
            "name": "c",
            "type": null,
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`imported member expression named alias 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "memberExpression",
          "object": Object {
            "kind": "id",
            "name": "b",
            "type": null,
          },
          "property": Object {
            "kind": "id",
            "name": "c",
            "type": null,
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`intersection type 1`] = `
Object {
  "component": Object {
    "kind": "intersection",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "types": Array [
      Object {
        "kind": "generic",
        "value": Object {
          "kind": "object",
          "members": Array [
            Object {
              "key": Object {
                "kind": "id",
                "name": "bar",
              },
              "kind": "property",
              "optional": false,
              "value": Object {
                "kind": "string",
              },
            },
          ],
          "referenceIdName": "BaseProps",
        },
      },
      Object {
        "kind": "object",
        "members": Array [
          Object {
            "key": Object {
              "kind": "id",
              "name": "isDefaultChecked",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "boolean",
            },
          },
        ],
      },
    ],
  },
  "kind": "program",
}
`;

exports[`member expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "memberExpression",
          "object": Object {
            "kind": "id",
            "name": "b",
            "type": null,
          },
          "property": Object {
            "kind": "id",
            "name": "c",
            "type": null,
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`nested intersection type with default props 1`] = `
Object {
  "component": Object {
    "kind": "intersection",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "types": Array [
      Object {
        "kind": "generic",
        "value": Object {
          "kind": "intersection",
          "referenceIdName": "Props",
          "types": Array [
            Object {
              "kind": "generic",
              "value": Object {
                "kind": "object",
                "members": Array [
                  Object {
                    "default": Object {
                      "kind": "string",
                      "value": "baz",
                    },
                    "key": Object {
                      "kind": "id",
                      "name": "bar",
                    },
                    "kind": "property",
                    "optional": false,
                    "value": Object {
                      "kind": "string",
                    },
                  },
                ],
                "referenceIdName": "BaseProps",
              },
            },
            Object {
              "kind": "object",
              "members": Array [
                Object {
                  "key": Object {
                    "kind": "id",
                    "name": "foo",
                  },
                  "kind": "property",
                  "optional": false,
                  "value": Object {
                    "kind": "string",
                  },
                },
              ],
            },
          ],
        },
      },
      Object {
        "kind": "object",
        "members": Array [
          Object {
            "key": Object {
              "kind": "id",
              "name": "isDefaultChecked",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "boolean",
            },
          },
        ],
      },
    ],
  },
  "kind": "program",
}
`;

exports[`new expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "args": Array [],
          "callee": Object {
            "kind": "id",
            "name": "Date",
            "type": null,
          },
          "kind": "new",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "id",
            "name": "Date",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`non-standard key 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "string",
          "value": "ab-a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`non-standard key with default 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "number",
          "value": 37,
        },
        "key": Object {
          "kind": "string",
          "value": "ab-a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`null literal 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "null",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": true,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`numeric literal 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "number",
          "value": 5,
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`spread element  1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "boolean",
          "value": true,
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
      Object {
        "default": Object {
          "kind": "boolean",
          "value": false,
        },
        "key": Object {
          "kind": "id",
          "name": "b",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`spread element cannot find 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "object",
          "members": Array [
            Object {
              "kind": "spread",
              "value": Object {
                "importKind": "value",
                "kind": "import",
                "moduleSpecifier": "somewhere",
                "name": "default",
                "referenceIdName": "something",
              },
            },
          ],
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "any",
        },
      },
      Object {
        "default": Object {
          "kind": "boolean",
          "value": false,
        },
        "key": Object {
          "kind": "id",
          "name": "b",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`string literal 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "string",
          "value": "stringVal",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`tagged template expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "templateExpression",
          "tag": Object {
            "kind": "memberExpression",
            "object": Object {
              "kind": "id",
              "name": "styled",
              "type": null,
            },
            "property": Object {
              "kind": "id",
              "name": "div",
              "type": null,
            },
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "function",
          "parameters": Array [],
          "returnType": Object {
            "kind": "mixed",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`template literal with quasis 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "expressions": Array [
            Object {
              "kind": "id",
              "name": "abcd",
              "type": null,
            },
          ],
          "kind": "templateLiteral",
          "quasis": Array [
            Object {
              "kind": "templateElement",
              "value": Object {
                "cooked": "asdf",
                "raw": "asdf",
              },
            },
            Object {
              "kind": "templateElement",
              "value": Object {
                "cooked": "",
                "raw": "",
              },
            },
          ],
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`test 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": true,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "id",
            "name": "Object",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "JSXElement",
          "value": Object {
            "attributes": Array [
              Object {
                "kind": "JSXAttribute",
                "name": Object {
                  "kind": "JSXIdentifier",
                  "value": "name",
                },
                "value": Object {
                  "expression": Object {
                    "kind": "string",
                    "value": "test icon",
                  },
                  "kind": "JSXExpressionContainer",
                },
              },
            ],
            "kind": "JSXOpeningElement",
            "name": Object {
              "kind": "JSXIdentifier",
              "value": "Icon",
            },
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "importKind": "type",
            "kind": "import",
            "moduleSpecifier": "react",
            "name": "Node",
            "referenceIdName": "Node",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement with JSXExpressionContainer 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "JSXElement",
          "value": Object {
            "attributes": Array [
              Object {
                "kind": "JSXAttribute",
                "name": Object {
                  "kind": "JSXIdentifier",
                  "value": "name",
                },
                "value": Object {
                  "expression": Object {
                    "kind": "string",
                    "value": "test icon",
                  },
                  "kind": "JSXExpressionContainer",
                },
              },
            ],
            "kind": "JSXOpeningElement",
            "name": Object {
              "kind": "JSXIdentifier",
              "value": "Icon",
            },
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "importKind": "type",
            "kind": "import",
            "moduleSpecifier": "react",
            "name": "Node",
            "referenceIdName": "Node",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement with member expression 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "JSXElement",
          "value": Object {
            "attributes": Array [
              Object {
                "kind": "JSXAttribute",
                "name": Object {
                  "kind": "JSXIdentifier",
                  "value": "name",
                },
                "value": Object {
                  "expression": Object {
                    "kind": "string",
                    "value": "test icon",
                  },
                  "kind": "JSXExpressionContainer",
                },
              },
            ],
            "kind": "JSXOpeningElement",
            "name": Object {
              "kind": "JSXMemberExpression",
              "object": Object {
                "kind": "JSXIdentifier",
                "value": "componentObj",
              },
              "property": Object {
                "kind": "JSXIdentifier",
                "value": "Icon",
              },
            },
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "importKind": "type",
            "kind": "import",
            "moduleSpecifier": "react",
            "name": "Node",
            "referenceIdName": "Node",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement with multiple props 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "JSXElement",
          "value": Object {
            "attributes": Array [
              Object {
                "kind": "JSXAttribute",
                "name": Object {
                  "kind": "JSXIdentifier",
                  "value": "name",
                },
                "value": Object {
                  "kind": "string",
                  "value": "test icon",
                },
              },
              Object {
                "kind": "JSXAttribute",
                "name": Object {
                  "kind": "JSXIdentifier",
                  "value": "iconType",
                },
                "value": Object {
                  "kind": "string",
                  "value": "avatar",
                },
              },
            ],
            "kind": "JSXOpeningElement",
            "name": Object {
              "kind": "JSXIdentifier",
              "value": "Icon",
            },
          },
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "importKind": "type",
            "kind": "import",
            "moduleSpecifier": "react",
            "name": "Node",
            "referenceIdName": "Node",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`test get defaultProps 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "kind": "string",
          "value": "a",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts any 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "any",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts array 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "typeParams": Object {
            "kind": "typeParams",
            "params": Array [
              Object {
                "kind": "number",
              },
            ],
          },
          "value": Object {
            "kind": "id",
            "name": "Array",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts boolean 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts call signature declaration 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "string",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "x",
                },
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts different React components 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "void",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "FooComponent",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts enum 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "union",
            "referenceIdName": "Color",
            "types": Array [
              Object {
                "kind": "id",
                "name": "Color.Red",
              },
              Object {
                "kind": "id",
                "name": "Color.Green",
              },
              Object {
                "kind": "id",
                "name": "Color.Blue",
              },
            ],
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts export all 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "nestedProperty1",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "nestedProperty2",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
    },
  },
  "kind": "program",
}
`;

exports[`ts function 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "string",
                },
              },
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "boolean",
                },
              },
            ],
            "returnType": Object {
              "kind": "number",
            },
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts interface 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "bar",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "referenceIdName": "ComponentProps",
    },
  },
  "kind": "program",
}
`;

exports[`ts interface extend 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "default": Object {
            "kind": "number",
            "value": 1,
          },
          "key": Object {
            "kind": "id",
            "name": "b",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "c",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts literals 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "string",
              "value": "25",
            },
            Object {
              "kind": "string",
              "value": 30,
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts method signature 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "on",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "param",
                "type": null,
                "value": Object {
                  "kind": "id",
                  "name": "x",
                },
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts no react component 1`] = `
Object {
  "component": undefined,
  "kind": "program",
}
`;

exports[`ts object 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "object",
          "members": Array [
            Object {
              "key": Object {
                "kind": "id",
                "name": "name",
              },
              "kind": "property",
              "optional": false,
              "value": Object {
                "kind": "string",
              },
            },
          ],
        },
      },
      Object {
        "key": Object {
          "kind": "id",
          "name": "bar",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
      Object {
        "key": Object {
          "kind": "id",
          "name": "verified",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "boolean",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts optional 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": true,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts parenthesized type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "object",
            "members": Array [
              Object {
                "key": Object {
                  "kind": "id",
                  "name": "b",
                },
                "kind": "property",
                "optional": false,
                "value": Object {
                  "kind": "string",
                },
              },
            ],
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts recursive type 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "properties",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "object",
              "members": Array [
                Object {
                  "key": Object {
                    "kind": "id",
                    "name": "property",
                  },
                  "kind": "property",
                  "optional": false,
                  "value": Object {
                    "kind": "string",
                  },
                },
              ],
              "referenceIdName": "SiblingInterface",
            },
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "type",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "RecursiveType",
            },
          },
        },
      ],
      "referenceIdName": "RecursiveType",
    },
  },
  "kind": "program",
}
`;

exports[`ts string 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "string",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts tuple 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "tuple",
          "types": Array [
            Object {
              "kind": "string",
            },
            Object {
              "kind": "number",
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts type alias 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts type alias declaration - 1 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "union",
              "referenceIdName": "LiteralType",
              "types": Array [
                Object {
                  "kind": "string",
                  "value": "one",
                },
                Object {
                  "kind": "string",
                  "value": "two",
                },
              ],
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts type alias declaration - 2 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "union",
              "referenceIdName": "ReactElement",
              "types": Array [
                Object {
                  "kind": "generic",
                  "typeParams": Object {
                    "kind": "typeParams",
                    "params": Array [
                      Object {
                        "kind": "any",
                      },
                    ],
                  },
                  "value": Object {
                    "kind": "id",
                    "name": "React.ReactElement",
                  },
                },
                Object {
                  "kind": "arrayType",
                  "type": Object {
                    "kind": "generic",
                    "typeParams": Object {
                      "kind": "typeParams",
                      "params": Array [
                        Object {
                          "kind": "any",
                        },
                      ],
                    },
                    "value": Object {
                      "kind": "id",
                      "name": "React.ReactElement",
                    },
                  },
                },
              ],
            },
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts type comments 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "leadingComments": Array [
            Object {
              "raw": " Type comment for a ",
              "type": "commentBlock",
              "value": "Type comment for a",
            },
          ],
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`ts union 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "number",
            },
            Object {
              "kind": "string",
            },
          ],
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`ts void 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "void",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`typeof statements 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "typeof",
          "name": "one",
          "type": Object {
            "kind": "generic",
            "value": Object {
              "kind": "number",
              "referenceIdName": "one",
              "value": 1,
            },
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`typescript indexed imported type 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "generic",
          "value": Object {
            "kind": "id",
            "name": "ImportedType['props']",
          },
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`typescript indexed type 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "key": Object {
          "kind": "id",
          "name": "foo",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`unary operator 1`] = `
Object {
  "component": Object {
    "kind": "object",
    "members": Array [
      Object {
        "default": Object {
          "argument": Object {
            "kind": "number",
            "value": 1,
          },
          "kind": "unary",
          "operator": "-",
        },
        "key": Object {
          "kind": "id",
          "name": "a",
        },
        "kind": "property",
        "optional": false,
        "value": Object {
          "kind": "number",
        },
      },
    ],
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
  },
  "kind": "program",
}
`;

exports[`with $Exact spread in type annotation and default props 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "string",
            "value": "abc",
          },
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "isDefaultChecked",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`with generic spread in type annotation and default props 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "kind": "spread",
          "value": Object {
            "kind": "generic",
            "typeParams": Object {
              "kind": "typeParams",
              "params": Array [
                Object {
                  "kind": "generic",
                  "value": Object {
                    "kind": "object",
                    "members": Array [
                      Object {
                        "key": Object {
                          "kind": "id",
                          "name": "foo",
                        },
                        "kind": "property",
                        "optional": false,
                        "value": Object {
                          "kind": "string",
                        },
                      },
                    ],
                    "referenceIdName": "BaseProps",
                  },
                },
                Object {
                  "kind": "generic",
                  "value": Object {
                    "kind": "id",
                    "name": "OtherProps",
                  },
                },
              ],
            },
            "value": Object {
              "kind": "id",
              "name": "$Diff",
            },
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "isDefaultChecked",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`with spread in type annotation 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "isDefaultChecked",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;

exports[`with spread in type annotation and default props 1`] = `
Object {
  "component": Object {
    "kind": "generic",
    "name": Object {
      "kind": "id",
      "name": "Component",
      "type": null,
    },
    "value": Object {
      "kind": "object",
      "members": Array [
        Object {
          "default": Object {
            "kind": "string",
            "value": "abc",
          },
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "isDefaultChecked",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "referenceIdName": "Props",
    },
  },
  "kind": "program",
}
`;
